Adjusted BG img & title

--- a/game.html
+++ b/game.html
@@ -10,6 +10,10 @@
         html {
             background-color: #E9C93F;
         }
+
+        .home {
+            background: none;
+        }
     </style>
   </head>
   <body>
