--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         <main>
             <div class="title">
                 <h3>Let's start</h3>
-                <h1>Rock, Paper, Scissors.</h1>
+                <h1>Rock, Paper,<br>Scissors.</h1>
             </div>
             <div id="options">
                 <a href="game.html">
