--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
                     <div id="single" class="button">Single<br>Player<br>↓</div>
                 </a>
                 <div id="trial">Trials?</div>
-                <div id="multi" class="button">Multi Players<br>↓</div>
+                <div id="multi" class="button">Multi<br>Players<br>↓</div>
             </div>
         </main>
         <footer>
