--- a/game.html
+++ b/game.html
@@ -7,20 +7,22 @@
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="style.css" />
     <style>
-        html {
-            background-color: #E9C93F;
-        }
+      html {
+        background-color: #e9c93f;
+      }
 
-        .home {
-            background: none;
-        }
+      .home {
+        background: none;
+      }
     </style>
   </head>
   <body>
     <section class="home" id="removeBG">
       <nav>
         <a href="home.html">
-            <div class="logo"><img src="images/logo.svg" alt="logo" /> Team 3</div>
+          <div class="logo">
+            <img src="images/logo.svg" alt="logo" /> Team 3
+          </div>
         </a>
         <div id="settings">
           <img src="images/settings.svg" alt="settings" />
@@ -45,16 +47,19 @@
         </div>
       </div>
       <div id="playGame" class="screen">
-        <h3>Select a Pose</h3><br><br><br>
+        <h3>Select a Pose</h3>
+        <br /><br /><br />
         <div>
-            <span><img src="images/rock.svg" alt="rock"></span>
-            <span><img src="images/paper.svg" alt="paper"></span>
-            <span><img src="images/scissors.svg" alt="scissors"></span>
+          <span><img src="images/rock.svg" alt="rock" /></span>
+          <span><img src="images/paper.svg" alt="paper" /></span>
+          <span><img src="images/scissors.svg" alt="scissors" /></span>
         </div>
       </div>
       <footer>
-        <div class="button" id="backBtn" onclick="backGame();">Back<br>←</div>
-        <div class="button" id="startBtn" onclick="startGame();">Start<br>→</div>
+        <div class="button" id="backBtn" onclick="backGame();">Back<br />←</div>
+        <div class="button" id="startBtn" onclick="startGame();">
+          Start<br />→
+        </div>
       </footer>
     </section>
     <script src="appgame.js"></script>
