--- a/home.html
+++ b/home.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <style>
-        footer {
-            opacity: 0;
-        }
+      footer {
+        opacity: 0;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <section class="home">
-        <nav>
-            <div class="logo"><img src="images/logo.svg" alt="logo"> Team 3</div>
-            <div id="settings">
-                <img src="images/settings.svg" alt="settings">
-            </div>
-        </nav>
-        <main>
-            <div class="title">
-                <h3>Let's start</h3>
-                <h1>Rock, Paper,<br>Scissors.</h1>
-            </div>
-            <div id="options">
-                <a href="game.html">
-                    <div id="single" class="button">Single<br>Player<br>↓</div>
-                </a>
-                <div id="trial">Trials?</div>
-                <div id="multi" class="button">Multi<br>Players<br>↓</div>
-            </div>
-        </main>
-        <footer>
-        <div class="button" id="backBtn" onclick="backGame();">Back<br>←</div>
-        <div class="button" id="startBtn" onclick="startGame();">Start<br>→</div>
+      <nav>
+        <div class="logo"><img src="images/logo.svg" alt="logo" /> Team 3</div>
+        <div id="settings">
+          <img src="images/settings.svg" alt="settings" />
+        </div>
+      </nav>
+      <main>
+        <div class="title">
+          <h3>Let's start</h3>
+          <h1>Rock, Paper,<br />Scissors.</h1>
+        </div>
+        <div id="options">
+          <a href="game.html">
+            <div id="single" class="button">Single<br />Player<br />↓</div>
+          </a>
+          <div id="trial">Trials?</div>
+          <div id="multi" class="button">Multi<br />Players<br />↓</div>
+        </div>
+      </main>
+      <footer>
+        <div class="button" id="backBtn" onclick="backGame();">Back<br />←</div>
+        <div class="button" id="startBtn" onclick="startGame();">
+          Start<br />→
+        </div>
       </footer>
     </section>
-</body>
+  </body>
 </html>
