Added button function & transition

--- a/game.html
+++ b/game.html
@@ -33,16 +33,16 @@
           <h3>NUMBER OF ROUNDS</h3>
           <div id="round-choice"><h1>1</h1></div>
           <div class="userChoice">
-            <img src="images/minus.svg" alt="minus" />
-            <img src="images/add.svg" alt="add" />
+            <span><img src="images/minus.svg" alt="minus" onclick="minusRound();"/></span>
+            <span><img src="images/add.svg" alt="add" onclick="addRound();"/></span>
           </div>
         </div>
         <div id="timer">
           <h3>TIMER</h3>
           <div id="timer-choice"><h1>5</h1></div>
           <div class="userChoice">
-            <img src="images/minus.svg" alt="minus" />
-            <img src="images/add.svg" alt="add" />
+            <span><img src="images/minus.svg" alt="minus" onclick="minusTimer();"/></span>
+            <span><img src="images/add.svg" alt="add" onclick="addTimer();"/></span>
           </div>
         </div>
       </div>
