--- a/game.html
+++ b/game.html
@@ -31,32 +31,54 @@
       <div id="game" class="screen">
         <div id="round">
           <h3>NUMBER OF ROUNDS</h3>
-          <div id="round-choice"><h1>1</h1></div>
+          <div id="round-choice"><h1>5</h1></div>
           <div class="userChoice">
-            <span><img src="images/minus.svg" alt="minus" onclick="minusRound();"/></span>
-            <span><img src="images/add.svg" alt="add" onclick="addRound();"/></span>
+            <span
+              ><img src="images/minus.svg" alt="minus" onclick="minusRound();"
+            /></span>
+            <span
+              ><img src="images/add.svg" alt="add" onclick="addRound();"
+            /></span>
           </div>
         </div>
         <div id="timer">
-          <h3>TIMER</h3>
+          <h3>TIMER (s)</h3>
           <div id="timer-choice"><h1>5</h1></div>
           <div class="userChoice">
-            <span><img src="images/minus.svg" alt="minus" onclick="minusTimer();"/></span>
-            <span><img src="images/add.svg" alt="add" onclick="addTimer();"/></span>
+            <span
+              ><img src="images/minus.svg" alt="minus" onclick="minusTimer();"
+            /></span>
+            <span
+              ><img src="images/add.svg" alt="add" onclick="addTimer();"
+            /></span>
           </div>
         </div>
       </div>
       <div id="playGame" class="screen">
         <h3>Select a Pose</h3>
+        <div class="score">
+          <div class="playerScore">
+            <h2>Player</h2>
+            <p class="p-count count">0</p>
+          </div>
+          <div class="movesleft"></div>
+          <div class="computerScore">
+            <h2>Computer</h2>
+            <p class="c-count count">0</p>
+          </div>
+        </div>
         <br /><br /><br />
-        <div>
-          <span><img src="images/rock.svg" alt="rock" /></span>
-          <span><img src="images/paper.svg" alt="paper" /></span>
-          <span><img src="images/scissors.svg" alt="scissors" /></span>
+        <div class="pose">
+          <span id="rock"><img src="images/rock.svg" alt="rock" />Rock</span>
+          <span id="paper"><img src="images/paper.svg" alt="paper" />Paper</span>
+          <span id="scissors"
+            ><img src="images/scissors.svg" alt="scissors"
+          />Scissors</span>
         </div>
       </div>
       <footer>
         <div class="button" id="backBtn" onclick="backGame();">Back<br />←</div>
+        <div class="result"></div>
         <div class="button" id="startBtn" onclick="startGame();">
           Start<br />→
         </div>
