--- a/game.html
+++ b/game.html
@@ -69,10 +69,10 @@
         </div>
         <br /><br /><br />
         <div class="pose">
-          <span id="rock"><img src="images/rock.svg" alt="rock" />Rock</span>
-          <span id="paper"><img src="images/paper.svg" alt="paper" />Paper</span>
+          <span id="rock"><img src="images/rock2D.svg" alt="rock" />Rock</span>
+          <span id="paper"><img src="images/paper2D.svg" alt="paper" />Paper</span>
           <span id="scissors"
-            ><img src="images/scissors.svg" alt="scissors"
+            ><img src="images/scissors2D.svg" alt="scissors"
           />Scissors</span>
         </div>
       </div>
