Added round timer function

--- a/game.html
+++ b/game.html
@@ -17,6 +17,7 @@
     </style>
   </head>
   <body>
+    <div id="counter"><h1>Ready</h1></div>
     <section class="home" id="removeBG">
       <nav>
         <a href="home.html">
