--- a/home.html
+++ b/home.html
@@ -1,44 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="style.css" />
-    <style>
-      footer {
-        opacity: 0;
-      }
-    </style>
-  </head>
-  <body>
-    <section class="home">
-      <nav>
-        <div class="logo"><img src="images/logo.svg" alt="logo" /> Team 3</div>
-        <div id="settings">
-          <img src="images/settings.svg" alt="settings" />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rock Paper Scissors</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    footer {
+      opacity: 0;
+    }
+  </style>
+</head>
+
+<body>
+  <section class="home">
+    <nav>
+      <div class="logo"><img src="images/logo.svg" alt="logo" /> Team 3</div>
+      <div class="dropdown">
+        <button onclick="myFunction()" class="dropbtn">Setting</button>
+        <div id="myDropdown" class="dropdown-content">
+          <a href="Setting/setting.html">Background Colour</a>
+          <a href="sound/sound.html">Sound and Volume</a>
         </div>
-      </nav>
-      <main>
-        <div class="title">
-          <h3>Let's start</h3>
-          <h1>Rock, Paper,<br />Scissors.</h1>
-        </div>
-        <div id="options">
-          <a href="game.html">
-            <div id="single" class="button">Single<br />Player<br />↓</div>
-          </a>
-          <div id="trial">Trials?</div>
-          <div id="multi" class="button">Multi<br />Players<br />↓</div>
-        </div>
-      </main>
-      <footer>
-        <div class="button" id="backBtn" onclick="backGame();">Back<br />←</div>
-        <div class="button" id="startBtn" onclick="startGame();">
-          Start<br />→
-        </div>
-      </footer>
-    </section>
-  </body>
+      </div>
+    </nav>
+    <main>
+      <div class="title">
+        <h3>Let's start</h3>
+        <h1>Rock, Paper,<br />Scissors.</h1>
+      </div>
+      <div id="options">
+        <a href="game.html">
+          <div id="single" class="button">Single<br />Player<br />↓</div>
+        </a>
+        <div id="trial">Trials?</div>
+        <div id="multi" class="button">Multi<br />Players<br />↓</div>
+      </div>
+    </main>
+    <footer>
+      <div class="button" id="backBtn" onclick="backGame();">Back<br />←</div>
+      <div class="button" id="startBtn" onclick="startGame();">
+        Start<br />→
+      </div>
+    </footer>
+  </section>
+  <script src="dropdown.js"></script>
+</body>
+
 </html>
