added sound and setting

--- a/game.html
+++ b/game.html
@@ -89,6 +89,7 @@
   </section>
   <script src="appgame.js"></script>
   <script src="dropdown.js"></script>
+  <script src="sound.js"></script>
 </body>
 
 </html>
