--- a/sound/sound.html
+++ b/sound/sound.html
@@ -5,9 +5,9 @@
     <h2>Sound Volume</h2>
     <div class="option">
 
-      <input type="range" id="volume" min="0" max="100" step="1" value="50">
+      <input type="range" id="volume-control" min="0" max="100" step="1" value="50">
     </div>
   </div>
 
-  <script src="setting.js"></script>
+  <script src="sound.js"></script>
 </body>
