Add clicked sound effect

--- a/game.html
+++ b/game.html
@@ -44,8 +44,8 @@
           <h1>5</h1>
         </div>
         <div class="userChoice">
-          <span><img src="images/minus.svg" alt="minus" onclick="minusRound();" /></span>
-          <span><img src="images/add.svg" alt="add" onclick="addRound();" /></span>
+          <span class="soundBtn"><img src="images/minus.svg" alt="minus" onclick="minusRound();" /></span>
+          <span class="soundBtn"><img src="images/add.svg" alt="add" onclick="addRound();" /></span>
         </div>
       </div>
       <div id="timer">
@@ -54,8 +54,8 @@
           <h1>5</h1>
         </div>
         <div class="userChoice">
-          <span><img src="images/minus.svg" alt="minus" onclick="minusTimer();" /></span>
-          <span><img src="images/add.svg" alt="add" onclick="addTimer();" /></span>
+          <span class="soundBtn"><img src="images/minus.svg" alt="minus" onclick="minusTimer();" /></span>
+          <span class="soundBtn"><img src="images/add.svg" alt="add" onclick="addTimer();" /></span>
         </div>
       </div>
     </div>
@@ -73,16 +73,16 @@
         </div>
       </div>
       <br /><br /><br />
-      <div class="pose">
+      <div class="pose soundBtn">
         <span id="rock"><img src="images/rock2D.svg" alt="rock" />Rock</span>
         <span id="paper"><img src="images/paper2D.svg" alt="paper" />Paper</span>
         <span id="scissors"><img src="images/scissors2D.svg" alt="scissors" />Scissors</span>
       </div>
     </div>
     <footer>
-      <div class="button" id="backBtn" onclick="backGame();">Back<br />←</div>
+      <div class="button soundBtn" id="backBtn" onclick="backGame();">Back<br />←</div>
       <div class="result"></div>
-      <div class="button" id="startBtn" onclick="startGame();">
+      <div class="button soundBtn" id="startBtn" onclick="startGame();">
         Start<br />→
       </div>
     </footer>
