back button to restart button

--- a/game.html
+++ b/game.html
@@ -80,13 +80,14 @@
       </div>
     </div>
     <footer>
-      <div class="button soundBtn" id="backBtn" onclick="backGame();">Back<br />←</div>
+      <div class="button soundBtn" id="backBtn" onclick="backGame();">Restart<br />←</div>
       <div class="result"></div>
       <div class="button soundBtn" id="startBtn" onclick="startGame();">
         Start<br />→
       </div>
     </footer>
   </section>
+
   <script src="appgame.js"></script>
   <script src="dropdown.js"></script>
   <script src="sound.js"></script>
