--- a/Setting/setting.html
+++ b/Setting/setting.html
@@ -2,7 +2,7 @@
 
 <body>
   <div class="settings-container">
-    <h2>Sound Volume</h2>
+    <h2>Background Colour</h2>
     <div class="option">
 
       <input type="range" id="volume" min="0" max="100" step="1" value="50">
